# StudentLabs

./: .gitignore  L2_clfsses_upd
1 semester/L3_cycles/: L3.cpp
1 semester/L4_massive/: main.cpp
1 semester/L5_functions/: CMakeLists.txt  L5  task1.cpp  task2.cpp  task2.hpp
L0_tests/: main.cpp
L1_numbers/: main.cpp
L1_structure/: 11.cpp
L1_structure/2L2/: 11.py
L2/L2/: L2.cpp
L2_classes_upd/: CMakeLists.txt  Cattle_ingredients_base.cpp  L2_clfsses_upd.cpp  Potion.cpp  Potion.hpp  main.cpp
L2_classes_upd/Cattle/: CMakeLists.txt  Cattle.cpp  Cattle.hpp  Potion.cpp
L2_classes_upd/Cattle_ingredients_base/: CMakeLists.txt  Cattle_ingredients_base.cpp  Cattle_ingredients_base.hpp
L2_classes_upd/L2_classes_upd/: CMakeLists.txt
L2_classes_upd/L2_classes_upd/Cattle_ingredients_base/: CMakeLists.txt  Cattle_ingredients_base.cpp  Cattle_ingredients_base.hpp  Potion.cpp  Potion.hpp
L2_classes_upd/Potion/: Potion.cpp  (+3 more)
L2_classes_upd2/: CMakeLists.txt
L3_cycles/: L3.cpp
L4/: CMakeLists.txt  Ticket.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticket.cpp  ticket.h
L5/: L5.pro  characters.cpp  characters.h  data.txt  enemy_form.cpp  enemy_form.h  enemy_form.ui  mage_form.cpp  mage_form.h  mage_form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
L5/L3_classes_upd/main_exec/: CMakeLists.txt
L5_functions/: L5_functions.cpp  task1.hpp
L6/: L6.cpp  L6.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  txttt.txt
L6_2/: mainwindow.cpp  mainwindow.ui
L7/: L7_part1.cpp  L7_pt2.cpp
Strings/: CMakeLists.txt  main.cpp  result.txt  text.txt
(+21 files in other folders)
